fix overflow x bug on some lowres screens

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,6 +6,7 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: var(--text);
     overflow-y: hidden;
+    overflow-x: hidden;
 }
 small {
     font-size: 9pt;
